# opaliha

./: .gitignore  README.md
opaliha/: Cargo.toml  main.py
opaliha/cli/src/: main.rs
opaliha/configs/: apochromat3.yaml
opaliha/opaliha/: aperture_params.py  field_data.py  materials.py  omath.py  optical_elements.py  ray_status.py  rays.py  wavelength.py
opaliha/src/: lib.rs  main.rs  test_config.yaml
opaliha/src/database/: mod.rs  wavelengths.rs
opaliha/src/geometry/: constants.rs  intersection.rs  mod.rs  ops.rs  point.rs  ray.rs  sphere.rs  vector.rs
opaliha/src/materials/: glass.rs  material.rs  mod.rs  n-bk7.json
opaliha/src/optical_elements/: mod.rs
opaliha/src/optical_surfaces/: mod.rs  optical_surface.rs  optical_surfaces.rs
opaliha/src/optical_system/: mod.rs  parameters.rs  sequential_optical_system.rs  tracing.rs
wvguide/: main.py
