[package]
name = "opaliha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
clap = "4.4.4"
derivative = "2.2.0"
json = "0.12.4"
ndarray = "0.15.6"
num = "0.4.1"
regex = "1.9.5"
yaml-rust = "0.4.5"
plotters = "0.3.3"

[profile.release]
panic = 'abort'

[workspace]
members = ["cli"]
